Se agrego Proyecto ASP.NET para la comunicacion de datos. Y ejecucion en tiempo real.

--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -32,4 +32,8 @@
     <Folder Include="Recursos\Dados\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebApi_SingalR_Com\WebApi_SingalR_Com.csproj" />
+  </ItemGroup>
+
 </Project>
