--- a/WebApi_SingalR_Com/WebApi_SingalR_Com.csproj
+++ b/WebApi_SingalR_Com/WebApi_SingalR_Com.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Hubs\" />
+    <Folder Include="wwwroot\lib\microsoft\signalr\dist\browser\" />
   </ItemGroup>
 
 </Project>
