--- a/WebApi_SingalR_Com/WebApi_SingalR_Com.csproj
+++ b/WebApi_SingalR_Com/WebApi_SingalR_Com.csproj
@@ -10,4 +10,8 @@
     <Folder Include="wwwroot\lib\microsoft\signalr\dist\browser\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
