--- a/WebApi_SingalR_Com/Properties/launchSettings.json
+++ b/WebApi_SingalR_Com/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "WebApi_SingalR_Com": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7170;http://localhost:5170",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
