--- a/WebApi_SingalR_Com/WebApi_SingalR_Com.csproj
+++ b/WebApi_SingalR_Com/WebApi_SingalR_Com.csproj
@@ -14,4 +14,11 @@
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\js\HomeCom.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
