Se dividio en regiones todas las funciones del cliente. Y se volvio para atras para pensar bien las cosas.

--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -58,6 +58,7 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarMercader.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\barco - copia - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\barco.jpg" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Barco\BarcoGrande.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\BARCO_Base.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\BARCO_BaseDos.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\BARCO_BaseUno.png" />
