--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -94,6 +94,8 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Plano.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Logos\LOGO_Gregoire.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Logos\LOGO_Manija.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Musica\elBueno.wav" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Musica\yohoho.wav" />
   </ItemGroup>
 
 </Project>
