--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Emgu.CV.Bitmap" Version="4.6.0.5131" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.6.0.5131" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.0" />
+    <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
@@ -84,6 +85,8 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\Notificador22.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\Notificador33.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\Viajando.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barco.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barco2.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Balas.png" />
