--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -93,6 +93,7 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Balas.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\BotonUno.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Brujula.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\LogoEjemplo.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Madera.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Oro.jpg" />
