--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -92,6 +92,7 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Balas.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\BotonMadera.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\BotonUno.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Brujula.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\LogoEjemplo.png" />
