--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -97,6 +97,7 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Brujula.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\LogoEjemplo.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Madera.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\MapaEsquina.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Oro.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Plano.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Logos\LOGO_Gregoire.png" />
