--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -97,11 +97,15 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\aguaLenta.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barco.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barco2.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\BarcoConMovimiento.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\BarcoLlega.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\BarcoLlegaLento.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\BarcoLlegaLento2.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barcoQuieto.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barcoQuietoLento.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\BarcoSubiendo.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelle.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelle.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Balas.png" />
