Se hacen unos cuantos cambios visuales

--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -43,14 +43,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar1.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar10.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar11.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar12.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar13.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar14.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar15.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar2.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar3.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar4.png" />
@@ -59,10 +55,6 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar7.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar8.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar9.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarArtillero.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarCapitan.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarCarpintero.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarMercader.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\barco - copia - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\barco.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\BarcoChiquito.png" />
@@ -73,7 +65,6 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\Canion.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\blackpearl-font.zip" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Caniones\Alerta.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Caniones\CanionBase.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Caniones\CanionBaseDerecho.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Caniones\CanionBaseIzquierdo.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Dados\Dado1.bmp" />
@@ -85,7 +76,6 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\FondoHomeDos.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\FONDO_Home.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\FONDO_Ingreso.jpg" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\FONDO_PantallaPhoto - Discontinuado.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\FONDO_PantallaPhoto.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\Madera.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Fondos\mapax.png" />
@@ -116,7 +106,7 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\LogoEjemplo.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Madera.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\MapaEsquina.png" />
-    <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Oro.jpg" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Oro.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Plano.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Turnero.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Logos\LOGO_Gregoire.png" />
