AHORA EL JUEGO EMPIEZA EN UNA ISLA (ENVIO DE RECURSOS)

--- a/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
+++ b/TrabajoPracticoFinalSegundo/TrabajoPracticoFinalSegundo.csproj
@@ -55,6 +55,10 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar7.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar8.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatar9.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarArtillero.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarCapitan.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarCarpintero.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Avatars\avatarMercader.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\barco - copia - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\barco.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Barco\BarcoChiquito.png" />
@@ -94,8 +98,17 @@
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barcoQuieto.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\barcoQuietoLento.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\BarcoSubiendo.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Barco\BarcoQuieto.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Barco\Entrar.gif" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Barco\Salir.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelle.gif" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelle.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelles\Muelle.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelles\Muelle.xcf" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Muelles\MuelleFinal.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Pezca\pez.png" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Pezca\pez.xcf" />
+    <None Include="bin\Debug\net6.0-windows\Recursos\Gifs\Pezca\pezfinal.png" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS - copia.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\ASSETS.jpg" />
     <None Include="bin\Debug\net6.0-windows\Recursos\Iconos\Balas.png" />
